⚡ feat(core): bulkhead 拒绝计数 — AgentBulkhead 进程内有界表（256 封顶折 overflow + topRejections 稳定排序 + NOOP 不计 + acquire 失败旁路）+ BulkheadHealth topRejected 3 条 + 红队（resolve T421-T422, impl264, spec117, spec84 fog 收口）